--- a/assets/css/sass/elements/_headerWrapper.scss
+++ b/assets/css/sass/elements/_headerWrapper.scss
@@ -3,6 +3,10 @@
 		width: cp(530px, $max_layout_width);
 		float: right;
 
+		@media screen and (max-width: 650px) {
+			width: 100%;
+		}
+
 		.header {
 			width: 100%;
 			float: none;
@@ -10,7 +14,7 @@
 
 			.fittextjs {
 				@media #{$LANDSCAPE} {
-					width: 100%;
+					width: auto;
 				}
 			}
 		}
