--- a/assets/css/sass/sections/_work.scss
+++ b/assets/css/sass/sections/_work.scss
@@ -1,14 +1,5 @@
 .work {
-  .header {
-    width: cp(390px, $max_layout_width);
-    padding: 68px 0 97px;
-
-    @media screen and (max-width: 1350px) {
-      padding: 5% 0 8%;
-    }
-  }
-
-  .content {
+  #portfolio {
     // ------------------------------------ GRID
     @include details;
     @include imgAnimation;
