--- a/assets/css/sass/style.scss
+++ b/assets/css/sass/style.scss
@@ -7,6 +7,7 @@
 @import "partials/_mixins";
 @import "partials/_generals";
 
+@import "elements/_headerWrapper";
 @import "elements/_mainHeader";
 @import "elements/_grid";
 @import "elements/_footer";
