--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,10 +50,6 @@ body {
   @media screen and (max-width: 250px) {
     body {
       font-size: 12px; } }
-  body h1 {
-    font-family: "Dosis", sans-serif;
-    font-weight: 600;
-    font-size: 2em; }
   body p {
     line-height: 1.2;
     letter-spacing: .17px;
@@ -79,10 +75,15 @@ body {
   #header-nav li:hover {
     font-weight: 900; }
 
-.section .header h1 {
+.fittextjs > div {
+  font-family: "Dosis", sans-serif;
+  font-weight: 600;
+  font-size: 1em;
   line-height: 1;
   text-transform: uppercase;
-  white-space: nowrap; }
+  white-space: nowrap;
+  float: right;
+  height: 100%; }
 
 @media screen and (min-width: 480px) and (max-width: 650px) and (min-device-height: 550px) {
   .home.section .sub-header {
@@ -278,6 +279,8 @@ img {
     .about.section .content p {
       width: 100%; } }
 
+.contact.section .header a {
+  float: right; }
 .contact.section .sub-header {
   float: right; }
   @media screen and (max-width: 1350px) {
@@ -291,9 +294,6 @@ img {
   @media screen and (max-width: 480px) {
     .contact.section .sub-header {
       float: none; } }
-  @media screen and (max-height: 600px) and (orientation: landscape) {
-    .contact.section .sub-header {
-      float: right; } }
 
 @media screen and (max-height: 600px) and (orientation: landscape) {
   .state2 #sections .contact.section.last {
