Align contact mail.

--- a/assets/css/sass/layout/_layout.scss
+++ b/assets/css/sass/layout/_layout.scss
@@ -133,6 +133,14 @@ p {
     text-align: center;
   }
 
+  .header {
+  	width: auto;
+  //	display: inline-block;
+  	a {
+  		float: right;
+  	}
+  }
+
 	// ----------- HEADER WRAPPER
 	  
 	@include headerWrapper;
