--- a/assets/css/sass/elements/_headerWrapper.scss
+++ b/assets/css/sass/elements/_headerWrapper.scss
@@ -28,6 +28,11 @@
 		display: inline-block;
 		padding: 10% 0;
 
+		.header {
+			text-align: center;
+		}
+
+
 		@media screen and (max-width: 650px) {
 			width: 70%;
 		}
